--- a/SEA_Application/Views/Admin_Dashboard/MonthlyFeeStudent.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/MonthlyFeeStudent.cshtml
@@ -512,45 +512,45 @@
                 <div style="display: none">
                     @Html.DropDownList("ClassID", null, htmlAttributes: new { @class = "form-control" })
                 </div>
-                <table class="table hover table-bordered" id="datatable">
-                    <thead>
-                        <tr>
+                <div class="table-responsive">
+                    <table class="table hover table-bordered" id="datatable">
+                        <thead>
+                            <tr>
 
-                            <th>Id</th>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Roll No
-                            </th>
-                            <th>
-                                Fee Payable
-                            </th>
+                                <th>Id</th>
+                                <th>
+                                    Name
+                                </th>
+                                <th>
+                                    Roll No
+                                </th>
+                                <th>
+                                    Fee Payable
+                                </th>
 
-                            <th>
-                                Fee Received
-                            </th>
-                            <th>
-                                Fee Type
-                            </th>
+                                <th>
+                                    Fee Received
+                                </th>
+                                <th>
+                                    Fee Type
+                                </th>
 
-                            <th>
-                                Discount
-                            </th>
-                            <th>
-                                Date
-                            </th>
-                            <th>
-                                Month
-                            </th>
+                                <th>
+                                    Discount
+                                </th>
+                                <th>
+                                    Date
+                                </th>
+                                <th>
+                                    Month
+                                </th>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-
-            </div>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                    </div>
+                </div>
         </div>
 
     </div>
