--- a/SEA_Application/Views/AspNetSubject/ClassIndex.cshtml
+++ b/SEA_Application/Views/AspNetSubject/ClassIndex.cshtml
@@ -499,26 +499,28 @@ else
 
                             <div class="box box-primary">
                                 <div class="box-title"></div>
-                                <div class="box-body">
-                                    <table class="table hover table-striped table-bordered" id="datatable">
-                                        <thead>
-                                            <tr>
-                                                <th>
-                                                    Subject
-                                                </th>
+                                
+                                    <div class="table-responsive">
+                                        <table class="table hover table-striped table-bordered" id="datatable">
+                                            <thead>
+                                                <tr>
+                                                    <th>
+                                                        Subject
+                                                    </th>
 
-                                                <th>
-                                                    Class Name
-                                                </th>
-                                                <th>
-                                                    Course Type
-                                                </th>
+                                                    <th>
+                                                        Class Name
+                                                    </th>
+                                                    <th>
+                                                        Course Type
+                                                    </th>
 
-                                            </tr>
-                                        </thead>
-                                        <tbody id="submission_table"></tbody>
-                                    </table>
-                                </div>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="submission_table"></tbody>
+                                        </table>
+                                        </div>
+                                    
                             </div>
                         </div>
 
