--- a/SEA_Application/Views/AspNetUser/TeachersIndex.cshtml
+++ b/SEA_Application/Views/AspNetUser/TeachersIndex.cshtml
@@ -225,30 +225,32 @@ else
             <div class="box box-primary">
                 <div class="box-body">
                     <br />
-                    <table class="table hover table-striped table-bordered" id="datatable">
-                        <thead>
-                            <tr>
-                                <th>
-                                    Name
-                                </th>
-                                <th>
-                                    User Name
-                                </th>
-                                <th>
-                                    Email
-                                </th>
-                                <th>
-                                    Phone Number
-                                </th>
-                                <th>
-                                    Class
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody id="submission_table"></tbody>
-                    </table>
-                    <div id="Error"></div>
-                </div>
+                    <div class="table-responsive">
+                        <table class="table hover table-striped table-bordered" id="datatable">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Name
+                                    </th>
+                                    <th>
+                                        User Name
+                                    </th>
+                                    <th>
+                                        Email
+                                    </th>
+                                    <th>
+                                        Phone Number
+                                    </th>
+                                    <th>
+                                        Class
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody id="submission_table"></tbody>
+                        </table>
+                        </div>
+                        <div id="Error"></div>
+                    </div>
             </div>
             <!----------------------------------------------------------------------------------->
         </div>
