--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -90,25 +90,25 @@
                     </li>
 
 
-                    <li class="nav-item ">
+                    @*<li class="nav-item ">
                         <a href="@(Url.Action("View_Project", "Student_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
                             </i>
                             <p id="">Course Topics/ Study Material </p>
                         </a>
-                    </li>
+                    </li>*@
 
 
 
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a href="@(Url.Action("Student_Announcement", "Student_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
                             </i>
                             <p>Announcment</p>
                         </a>
-                    </li>
+                    </li>*@
 
                     <li class="nav-item">
                         <a href="@(Url.Action("Index", "AspNetOrderNotes"))" class="nav-link nav-toggle">
