--- a/SEA_Application/Views/Student_Dashboard/_Student_Attendance.cshtml
+++ b/SEA_Application/Views/Student_Dashboard/_Student_Attendance.cshtml
@@ -160,26 +160,29 @@
 
         <div class="box box-primary">
             <div class="box-body">
-                <table class="table hover table-striped table-bordered" id="datatable">
-                    <thead>
-                        <tr>
-                            <th>
-                                Subject
-                            </th>
-                            <th>
-                                Status
-                            </th>
-                            <th>
-                                Date
-                            </th>
-                            <th>
-                                Reason
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody id="attendance_table"></tbody>
-                </table>
-            </div>
+
+                <div class="table-responsive">
+                    <table class="table hover table-striped table-bordered" id="datatable">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Subject
+                                </th>
+                                <th>
+                                    Status
+                                </th>
+                                <th>
+                                    Date
+                                </th>
+                                <th>
+                                    Reason
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="attendance_table"></tbody>
+                    </table>
+                    </div>
+                </div>
         </div>
     </div>
 </div>
