--- a/SEA_Application/Views/AspNetNotes/Index.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Index.cshtml
@@ -80,80 +80,81 @@
                     <div class="box-body">
                         @*<p>
                             @Html.ActionLink("Create New", "Create")
-                        </p>*@
-                        <table class="table hover table-bordered table-striped" id="datatable">
-                            <thead>
+                        </p>*@<div class="table-responsive">
+                                  <table class="table hover table-striped table-bordered" id="datatable">
+                                      <thead>
 
-                                <tr>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Title)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Description)
-                                    </th>
-                                    <th>
-                                        Course Type
-                                    </th>
-                                    <th>
-                                        Subject Name
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.NotesType)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.GrandTotal)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.OAPrice)
-                                    </th>
+                                          <tr>
+                                              <th>
+                                                  @Html.DisplayNameFor(model => model.Title)
+                                              </th>
+                                              <th>
+                                                  @Html.DisplayNameFor(model => model.Description)
+                                              </th>
+                                              <th>
+                                                  Course Type
+                                              </th>
+                                              <th>
+                                                  Subject Name
+                                              </th>
+                                              <th>
+                                                  @Html.DisplayNameFor(model => model.NotesType)
+                                              </th>
+                                              <th>
+                                                  @Html.DisplayNameFor(model => model.GrandTotal)
+                                              </th>
+                                              <th>
+                                                  @Html.DisplayNameFor(model => model.OAPrice)
+                                              </th>
 
-                                    <th>
-                                        Creation Date
-                                    </th>
-                                    <th></th>
-                                </tr>
-                            </thead>
+                                              <th>
+                                                  Creation Date
+                                              </th>
+                                              <th></th>
+                                          </tr>
+                                      </thead>
 
-                            <tbody>
+                                      <tbody>
 
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Title)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Description)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.CourseType)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.AspNetSubject.SubjectName)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.NotesType)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.GrandTotal)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.OAPrice)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.CreationDate)
-                                        </td>
-                                        <td>
-                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                            @Html.ActionLink("Details", "Details", new { id = item.Id })
+                                          @foreach (var item in Model)
+                                          {
+                                              <tr>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.Title)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.Description)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.CourseType)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.AspNetSubject.SubjectName)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.NotesType)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.GrandTotal)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.OAPrice)
+                                                  </td>
+                                                  <td>
+                                                      @Html.DisplayFor(modelItem => item.CreationDate)
+                                                  </td>
+                                                  <td>
+                                                      @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                                      @Html.ActionLink("Details", "Details", new { id = item.Id })
 
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
+                                                  </td>
+                                              </tr>
+                                          }
+                                      </tbody>
 
-                        </table>
-                    </div><!--End of Tab 1-->
+                                  </table>
+                        </div>
+</div><!--End of Tab 1-->
 
                 </div>
             </div>
@@ -161,84 +162,83 @@
                 <div class="box box-primary">
                     <div class="box-title"></div>
                     <div class="box-body">
-                        <table class="table hover table-bordered table-striped" id="datatable1">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        Id
-                                    </th>
-                                    <th>
-                                        Student Name
-                                    </th>
-                                    <th>
-                                        Session Name
-                                    </th>
-                                    <th>
-                                        Total Amount
-                                    </th>
-                                    <th>
-                                        Status
-                                    </th>
+                        <div class="table-responsive">
+                            <table class="table hover table-bordered table-striped" id="datatable1">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            Id
+                                        </th>
+                                        <th>
+                                            Student Name
+                                        </th>
+                                        <th>
+                                            Session Name
+                                        </th>
+                                        <th>
+                                            Total Amount
+                                        </th>
+                                        <th>
+                                            Status
+                                        </th>
 
-                                    <th>
-                                        OrderType
-                                    </th>
-                                    <th>
-                                        Details
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody id="RecentOrderTableBody">
-                            </tbody>
-                        </table>
-
-
-
-                        <div id="bill" style="margin-left:30px">
-
-                            <div class="ticket" id="ticket">
-                                <br>
-                                <center>
-
-                                    <img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />
-                                </center>
-
-
-                                <p class="centered">
-                                    Officer's Academy
-                                    <br><span id="OrderNo"></span>
-                                    <br><span id="DateTime"></span>
-                                </p>
-
-
-                                <br><b>Cashier:</b> SeaAdmin
-
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <th class="description">Title</th>
-
-                                            <th class="quantity">Qty</th>
-                                            <th class="price">Price</th>
-                                            <th class="Amount">Total</th>
-
-                                        </tr>
-
-
-                                    </thead>
-                                    <tbody id="billbody" style="border: 1px solid black">
-                                    </tbody>
-                                </table>
-                                <p class="centered">
-                                    Thanks for your purchase!
-                                    <br>Developed by : TheRiskAdvisors
-                                </p>
+                                        <th>
+                                            OrderType
+                                        </th>
+                                        <th>
+                                            Details
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody id="RecentOrderTableBody"></tbody>
+                            </table>
                             </div>
 
+
+                            <div id="bill" style="margin-left:30px">
+
+                                <div class="ticket" id="ticket">
+                                    <br>
+                                    <center>
+
+                                        <img src="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/logo.PNG" />
+                                    </center>
+
+
+                                    <p class="centered">
+                                        Officer's Academy
+                                        <br><span id="OrderNo"></span>
+                                        <br><span id="DateTime"></span>
+                                    </p>
+
+
+                                    <br><b>Cashier:</b> SeaAdmin
+
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th class="description">Title</th>
+
+                                                <th class="quantity">Qty</th>
+                                                <th class="price">Price</th>
+                                                <th class="Amount">Total</th>
+
+                                            </tr>
+
+
+                                        </thead>
+                                        <tbody id="billbody" style="border: 1px solid black"></tbody>
+                                    </table>
+                                    <p class="centered">
+                                        Thanks for your purchase!
+                                        <br>Developed by : TheRiskAdvisors
+                                    </p>
+                                </div>
+
+                            </div>
+                            <input type="hidden" id="OrderType" />
+                            <button id="btnPrint" style="display:none;margin-left:30px;" class="hidden-print">Print</button>
                         </div>
-                        <input type="hidden" id="OrderType" />
-                        <button id="btnPrint" style="display:none;margin-left:30px;" class="hidden-print">Print</button>
-                    </div>
                 </div>
             </div> <!--End of Tab 2-->
         </div>
