--- a/SEA_Application/Views/Shared/_AccountantDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AccountantDashboardLayout.cshtml
@@ -13,6 +13,7 @@
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <!-- CSS Files -->
@@ -22,6 +23,7 @@
 
     <link rel="stylesheet" href="~/Content/assets/css/style.css">
     <script src="~/AdminLTE/plugins/jquery/js/jQuery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="../assets/assets/summernote.min.css">
 
     <style>
         table.dataTable.hover tbody tr:hover,
