--- a/SEA_Application/Views/Account/Login.cshtml
+++ b/SEA_Application/Views/Account/Login.cshtml
@@ -140,7 +140,7 @@
                         <div class="col-xs-12 col-md-12">
                             <div class="sea-img">
                                 <a href="@Url.Action("Login", "Account")">
-                                    <img height="80" src="~/Content/Images/logo SEA.PNG" />
+                                    <img  src="~/Content/assets/assets/img/orignal.png"  width="142" height="142"/>
                                 </a>
                             </div>
                         </div>
