--- a/SEA_Application/Views/AspNetUser/TeacherDetail.cshtml
+++ b/SEA_Application/Views/AspNetUser/TeacherDetail.cshtml
@@ -6,7 +6,7 @@
 <script>
     $(document).ready(function () {
 
-        $("#PageHeader").html("Add Teacher");
+        $("#PageHeader").html("View Teacher");
 
         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li> <a href="/AspNetUser/TeachersIndex"> Teacher </a> <span>&gt;</span></li>');
