--- a/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
+++ b/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
@@ -54,7 +54,7 @@
 
                     table.fnClearTable();
                     $.each(data, function (i, item) {
-                        table.fnAddData([item.Name + "<input type=hidden value="+ item.Id +">", item.UserName, item.Email, item.PhoneNumber, item.ClassName]);
+                        table.fnAddData([item.UserName + "<input type=hidden value="+ item.Id +">", item.Name, item.Email, item.PhoneNumber, item.ClassName]);
                     });
                     table.fnDraw();
                     $('.eeniart0017').css("display", "none");
@@ -112,10 +112,10 @@
                                     <thead>
                                         <tr>
                                             <th>
-                                                Name
+                                                Roll Number
                                             </th>
                                             <th>
-                                                Roll Number
+                                                Name
                                             </th>
                                             <th>
                                                 Email
@@ -124,7 +124,7 @@
                                                 Phone Number
                                             </th>
                                             <th>
-                                                Section
+                                                Session
                                             </th>
                                         </tr>
                                     </thead>
